// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TechDebtsView when components prop is set to an empty array renders no table 1`] = `
"<div>
  <div class=\\"card my-3\\">
    <!---->
    <!---->
    <div class=\\"list-group\\">
      <div class=\\"list-group-item list-group-item-success\\"><span class=\\"display-1\\">0</span> tech debts
      </div>
    </div>
    <!---->
    <!---->
  </div>
  <!---->
  <div class=\\"card my-3\\">
    <!---->
    <!---->
    <div class=\\"card-body\\">
      <h4 class=\\"card-title\\">0 Tech Debts</h4>
      <!---->
      <p class=\\"card-text\\">
        <!---->
      </p>
    </div>
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`TechDebtsView when components prop is set to multiple components with tech debts renders all the tech debts in a table 1`] = `
"<div>
  <div class=\\"card my-3\\">
    <!---->
    <!---->
    <div class=\\"list-group\\">
      <!---->
      <div class=\\"list-group-item list-group-item-warning\\"><span class=\\"display-2\\">3</span> <b>High</b> tech debts
      </div>
      <div class=\\"list-group-item list-group-item-info\\"><span class=\\"display-3\\">3</span> <b>Medium</b> tech debts
      </div>
    </div>
    <!---->
    <!---->
  </div>
  <div class=\\"mt-3 mb-4\\"><button id=\\"toggle-filters\\" type=\\"button\\" class=\\"btn btn-secondary collapsed\\" aria-expanded=\\"false\\" aria-controls=\\"filters\\"><svg viewBox=\\"0 0 16 16\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" role=\\"img\\" aria-label=\\"blank\\" aria-hidden=\\"true\\" xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"currentColor\\" class=\\"bi-blank b-icon bi\\">
        <g></g>
      </svg> Filters
    </button>
    <transition-stub css=\\"true\\" enterclass=\\"\\" leaveclass=\\"collapse show\\" entertoclass=\\"collapse show\\" leavetoclass=\\"collapse\\" enteractiveclass=\\"collapsing\\" leaveactiveclass=\\"collapsing\\" class=\\"mt-3\\">
      <div id=\\"filters\\" class=\\"collapse\\" style=\\"display: none;\\">
        <div class=\\"card-columns\\" style=\\"column-count: 3;\\">
          <!---->
          <!---->
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__15\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__15__BV_label_\\">Teams</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__16\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__16_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__16_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__16_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__16_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-1\\" id=\\"__BVID__16_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__16_BV_option_2\\"><span>test-team-id-2-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-2\\" id=\\"__BVID__16_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__16_BV_option_3\\"><span>test-team-id-2-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-1\\" id=\\"__BVID__16_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__16_BV_option_4\\"><span>test-team-id-3-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-2\\" id=\\"__BVID__16_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__16_BV_option_5\\"><span>test-team-id-3-2</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__23\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__23__BV_label_\\">Tags</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__24\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__24_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__24_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__24_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__24_BV_option_1\\"><span>test-tag-1-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-1\\" id=\\"__BVID__24_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__24_BV_option_2\\"><span>test-tag-2-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-2\\" id=\\"__BVID__24_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__24_BV_option_3\\"><span>test-tag-2-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-1\\" id=\\"__BVID__24_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__24_BV_option_4\\"><span>test-tag-3-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-2\\" id=\\"__BVID__24_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__24_BV_option_5\\"><span>test-tag-3-2</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__31\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__31__BV_label_\\">Component Types</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__32\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__32_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__32_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__32_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__32_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\" id=\\"__BVID__32_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__32_BV_option_2\\"><span>test-component-type-id-3</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__36\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__36__BV_label_\\">Platforms</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__37\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__37_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__37_BV_option_0\\"><span>undefined</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__39\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__39__BV_label_\\">Component</label>
                <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                    <option value=\\"\\">Please select a component</option>
                    <option value=\\"test-component-id-1\\">test-component-id-1</option>
                    <option value=\\"test-component-id-2\\">test-component-id-2</option>
                    <option value=\\"test-component-id-3\\">test-component-id-3</option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"card my-3\\">
    <!---->
    <!---->
    <div class=\\"card-body\\">
      <h4 class=\\"card-title\\">6 Tech Debts</h4>
      <!---->
      <p class=\\"card-text\\">
        <table class=\\"table table-dark\\">
          <thead>
            <tr>
              <th class=\\"component\\">Component</th>
              <th class=\\"priority\\">Priority</th>
              <th class=\\"teams\\">Teams</th>
              <th class=\\"description\\">Description</th>
              <th class=\\"notes\\">Notes</th>
              <th class=\\"links\\">Links</th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
              <td class=\\"priority\\"><span class=\\"badge badge-warning\\">
          High
        </span></td>
              <td class=\\"teams\\">
                <ul>
                  <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                    <!---->
                    <!---->
                  </li>
                  <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                    <!---->
                    <!---->
                  </li>
                </ul>
              </td>
              <td class=\\"description\\">
                <div>
                  <p>Test Tech Debt Description 1 2</p>
                </div>
              </td>
              <td class=\\"notes\\">
                <div>
                  <p>Test Tech Debt Notes 1 2</p>
                </div>
              </td>
              <td class=\\"links\\">
                <ul>
                  <li><a href=\\"https://example.com/test-tech-debt-link-1-2-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-2-1</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 1 2 1</p>
                    </div>
                  </li>
                  <li><a href=\\"https://example.com/test-tech-debt-link-1-2-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-2-2</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 1 2 2</p>
                    </div>
                  </li>
                </ul>
              </td>
            </tr>
            <tr>
              <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-2\\">Test Component Name 2</a></td>
              <td class=\\"priority\\"><span class=\\"badge badge-warning\\">
          High
        </span></td>
              <td class=\\"teams\\">
                <ul>
                  <li><a href=\\"/teams/test-team-id-2-1\\" class=\\"team-name\\">test-team-id-2-1</a>
                    <!---->
                    <!---->
                  </li>
                  <li><a href=\\"/teams/test-team-id-2-2\\" class=\\"team-name\\">test-team-id-2-2</a>
                    <!---->
                    <!---->
                  </li>
                </ul>
              </td>
              <td class=\\"description\\">
                <div>
                  <p>Test Tech Debt Description 2 2</p>
                </div>
              </td>
              <td class=\\"notes\\">
                <div>
                  <p>Test Tech Debt Notes 2 2</p>
                </div>
              </td>
              <td class=\\"links\\">
                <ul>
                  <li><a href=\\"https://example.com/test-tech-debt-link-2-2-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-2-2-1</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 2 2 1</p>
                    </div>
                  </li>
                  <li><a href=\\"https://example.com/test-tech-debt-link-2-2-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-2-2-2</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 2 2 2</p>
                    </div>
                  </li>
                </ul>
              </td>
            </tr>
            <tr>
              <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-3\\">Test Component Name 3</a></td>
              <td class=\\"priority\\"><span class=\\"badge badge-warning\\">
          High
        </span></td>
              <td class=\\"teams\\">
                <ul>
                  <li><a href=\\"/teams/test-team-id-3-1\\" class=\\"team-name\\">test-team-id-3-1</a>
                    <!---->
                    <!---->
                  </li>
                  <li><a href=\\"/teams/test-team-id-3-2\\" class=\\"team-name\\">test-team-id-3-2</a>
                    <!---->
                    <!---->
                  </li>
                </ul>
              </td>
              <td class=\\"description\\">
                <div>
                  <p>Test Tech Debt Description 3 2</p>
                </div>
              </td>
              <td class=\\"notes\\">
                <div>
                  <p>Test Tech Debt Notes 3 2</p>
                </div>
              </td>
              <td class=\\"links\\">
                <ul>
                  <li><a href=\\"https://example.com/test-tech-debt-link-3-2-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-3-2-1</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 3 2 1</p>
                    </div>
                  </li>
                  <li><a href=\\"https://example.com/test-tech-debt-link-3-2-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-3-2-2</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 3 2 2</p>
                    </div>
                  </li>
                </ul>
              </td>
            </tr>
            <tr>
              <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
              <td class=\\"priority\\"><span class=\\"badge badge-info\\">
          Medium
        </span></td>
              <td class=\\"teams\\">
                <ul>
                  <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                    <!---->
                    <!---->
                  </li>
                  <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                    <!---->
                    <!---->
                  </li>
                </ul>
              </td>
              <td class=\\"description\\">
                <div>
                  <p>Test Tech Debt Description 1 1</p>
                </div>
              </td>
              <td class=\\"notes\\">
                <div>
                  <p>Test Tech Debt Notes 1 1</p>
                </div>
              </td>
              <td class=\\"links\\">
                <ul>
                  <li><a href=\\"https://example.com/test-tech-debt-link-1-1-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-1-1</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 1 1 1</p>
                    </div>
                  </li>
                  <li><a href=\\"https://example.com/test-tech-debt-link-1-1-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-1-2</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 1 1 2</p>
                    </div>
                  </li>
                </ul>
              </td>
            </tr>
            <tr>
              <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-2\\">Test Component Name 2</a></td>
              <td class=\\"priority\\"><span class=\\"badge badge-info\\">
          Medium
        </span></td>
              <td class=\\"teams\\">
                <ul>
                  <li><a href=\\"/teams/test-team-id-2-1\\" class=\\"team-name\\">test-team-id-2-1</a>
                    <!---->
                    <!---->
                  </li>
                  <li><a href=\\"/teams/test-team-id-2-2\\" class=\\"team-name\\">test-team-id-2-2</a>
                    <!---->
                    <!---->
                  </li>
                </ul>
              </td>
              <td class=\\"description\\">
                <div>
                  <p>Test Tech Debt Description 2 1</p>
                </div>
              </td>
              <td class=\\"notes\\">
                <div>
                  <p>Test Tech Debt Notes 2 1</p>
                </div>
              </td>
              <td class=\\"links\\">
                <ul>
                  <li><a href=\\"https://example.com/test-tech-debt-link-2-1-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-2-1-1</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 2 1 1</p>
                    </div>
                  </li>
                  <li><a href=\\"https://example.com/test-tech-debt-link-2-1-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-2-1-2</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 2 1 2</p>
                    </div>
                  </li>
                </ul>
              </td>
            </tr>
            <tr>
              <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-3\\">Test Component Name 3</a></td>
              <td class=\\"priority\\"><span class=\\"badge badge-info\\">
          Medium
        </span></td>
              <td class=\\"teams\\">
                <ul>
                  <li><a href=\\"/teams/test-team-id-3-1\\" class=\\"team-name\\">test-team-id-3-1</a>
                    <!---->
                    <!---->
                  </li>
                  <li><a href=\\"/teams/test-team-id-3-2\\" class=\\"team-name\\">test-team-id-3-2</a>
                    <!---->
                    <!---->
                  </li>
                </ul>
              </td>
              <td class=\\"description\\">
                <div>
                  <p>Test Tech Debt Description 3 1</p>
                </div>
              </td>
              <td class=\\"notes\\">
                <div>
                  <p>Test Tech Debt Notes 3 1</p>
                </div>
              </td>
              <td class=\\"links\\">
                <ul>
                  <li><a href=\\"https://example.com/test-tech-debt-link-3-1-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-3-1-1</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 3 1 1</p>
                    </div>
                  </li>
                  <li><a href=\\"https://example.com/test-tech-debt-link-3-1-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-3-1-2</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 3 1 2</p>
                    </div>
                  </li>
                </ul>
              </td>
            </tr>
          </tbody>
        </table>
      </p>
    </div>
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`TechDebtsView when components prop is set to multiple components with tech debts when selecting a filter, the filter is applied to the tech debts in the table 1`] = `
"<div>
  <div class=\\"card my-3\\">
    <!---->
    <!---->
    <div class=\\"list-group\\">
      <!---->
      <div class=\\"list-group-item list-group-item-warning\\"><span class=\\"display-2\\">3</span> <b>High</b> tech debts
      </div>
      <div class=\\"list-group-item list-group-item-info\\"><span class=\\"display-3\\">3</span> <b>Medium</b> tech debts
      </div>
    </div>
    <!---->
    <!---->
  </div>
  <div class=\\"mt-3 mb-4\\"><button id=\\"toggle-filters\\" type=\\"button\\" class=\\"btn btn-secondary collapsed\\" aria-expanded=\\"false\\" aria-controls=\\"filters\\"><svg viewBox=\\"0 0 16 16\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" role=\\"img\\" aria-label=\\"blank\\" aria-hidden=\\"true\\" xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"currentColor\\" class=\\"bi-blank b-icon bi\\">
        <g></g>
      </svg> Filters
    </button>
    <transition-stub css=\\"true\\" enterclass=\\"\\" leaveclass=\\"collapse show\\" entertoclass=\\"collapse show\\" leavetoclass=\\"collapse\\" enteractiveclass=\\"collapsing\\" leaveactiveclass=\\"collapsing\\" class=\\"mt-3\\">
      <div id=\\"filters\\" class=\\"collapse\\" style=\\"display: none;\\">
        <div class=\\"card-columns\\" style=\\"column-count: 3;\\">
          <!---->
          <!---->
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__103\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__103__BV_label_\\">Teams</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__104\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__104_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__104_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__104_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__104_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-1\\" id=\\"__BVID__104_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__104_BV_option_2\\"><span>test-team-id-2-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-2\\" id=\\"__BVID__104_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__104_BV_option_3\\"><span>test-team-id-2-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-1\\" id=\\"__BVID__104_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__104_BV_option_4\\"><span>test-team-id-3-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-2\\" id=\\"__BVID__104_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__104_BV_option_5\\"><span>test-team-id-3-2</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__111\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__111__BV_label_\\">Tags</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__112\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__112_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__112_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__112_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__112_BV_option_1\\"><span>test-tag-1-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-1\\" id=\\"__BVID__112_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__112_BV_option_2\\"><span>test-tag-2-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-2\\" id=\\"__BVID__112_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__112_BV_option_3\\"><span>test-tag-2-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-1\\" id=\\"__BVID__112_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__112_BV_option_4\\"><span>test-tag-3-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-2\\" id=\\"__BVID__112_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__112_BV_option_5\\"><span>test-tag-3-2</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__119\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__119__BV_label_\\">Component Types</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__120\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__120_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__120_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__120_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__120_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\" id=\\"__BVID__120_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__120_BV_option_2\\"><span>test-component-type-id-3</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__124\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__124__BV_label_\\">Platforms</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__125\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__125_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__125_BV_option_0\\"><span>undefined</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__127\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__127__BV_label_\\">Component</label>
                <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                    <option value=\\"\\">Please select a component</option>
                    <option value=\\"test-component-id-1\\">test-component-id-1</option>
                    <option value=\\"test-component-id-2\\">test-component-id-2</option>
                    <option value=\\"test-component-id-3\\">test-component-id-3</option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"card my-3\\">
    <!---->
    <!---->
    <div class=\\"card-body\\">
      <h4 class=\\"card-title\\">6 Tech Debts</h4>
      <!---->
      <p class=\\"card-text\\">
        <table class=\\"table table-dark\\">
          <thead>
            <tr>
              <th class=\\"component\\">Component</th>
              <th class=\\"priority\\">Priority</th>
              <th class=\\"teams\\">Teams</th>
              <th class=\\"description\\">Description</th>
              <th class=\\"notes\\">Notes</th>
              <th class=\\"links\\">Links</th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
              <td class=\\"priority\\"><span class=\\"badge badge-warning\\">
          High
        </span></td>
              <td class=\\"teams\\">
                <ul>
                  <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                    <!---->
                    <!---->
                  </li>
                  <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                    <!---->
                    <!---->
                  </li>
                </ul>
              </td>
              <td class=\\"description\\">
                <div>
                  <p>Test Tech Debt Description 1 2</p>
                </div>
              </td>
              <td class=\\"notes\\">
                <div>
                  <p>Test Tech Debt Notes 1 2</p>
                </div>
              </td>
              <td class=\\"links\\">
                <ul>
                  <li><a href=\\"https://example.com/test-tech-debt-link-1-2-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-2-1</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 1 2 1</p>
                    </div>
                  </li>
                  <li><a href=\\"https://example.com/test-tech-debt-link-1-2-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-2-2</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 1 2 2</p>
                    </div>
                  </li>
                </ul>
              </td>
            </tr>
            <tr>
              <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-2\\">Test Component Name 2</a></td>
              <td class=\\"priority\\"><span class=\\"badge badge-warning\\">
          High
        </span></td>
              <td class=\\"teams\\">
                <ul>
                  <li><a href=\\"/teams/test-team-id-2-1\\" class=\\"team-name\\">test-team-id-2-1</a>
                    <!---->
                    <!---->
                  </li>
                  <li><a href=\\"/teams/test-team-id-2-2\\" class=\\"team-name\\">test-team-id-2-2</a>
                    <!---->
                    <!---->
                  </li>
                </ul>
              </td>
              <td class=\\"description\\">
                <div>
                  <p>Test Tech Debt Description 2 2</p>
                </div>
              </td>
              <td class=\\"notes\\">
                <div>
                  <p>Test Tech Debt Notes 2 2</p>
                </div>
              </td>
              <td class=\\"links\\">
                <ul>
                  <li><a href=\\"https://example.com/test-tech-debt-link-2-2-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-2-2-1</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 2 2 1</p>
                    </div>
                  </li>
                  <li><a href=\\"https://example.com/test-tech-debt-link-2-2-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-2-2-2</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 2 2 2</p>
                    </div>
                  </li>
                </ul>
              </td>
            </tr>
            <tr>
              <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-3\\">Test Component Name 3</a></td>
              <td class=\\"priority\\"><span class=\\"badge badge-warning\\">
          High
        </span></td>
              <td class=\\"teams\\">
                <ul>
                  <li><a href=\\"/teams/test-team-id-3-1\\" class=\\"team-name\\">test-team-id-3-1</a>
                    <!---->
                    <!---->
                  </li>
                  <li><a href=\\"/teams/test-team-id-3-2\\" class=\\"team-name\\">test-team-id-3-2</a>
                    <!---->
                    <!---->
                  </li>
                </ul>
              </td>
              <td class=\\"description\\">
                <div>
                  <p>Test Tech Debt Description 3 2</p>
                </div>
              </td>
              <td class=\\"notes\\">
                <div>
                  <p>Test Tech Debt Notes 3 2</p>
                </div>
              </td>
              <td class=\\"links\\">
                <ul>
                  <li><a href=\\"https://example.com/test-tech-debt-link-3-2-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-3-2-1</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 3 2 1</p>
                    </div>
                  </li>
                  <li><a href=\\"https://example.com/test-tech-debt-link-3-2-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-3-2-2</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 3 2 2</p>
                    </div>
                  </li>
                </ul>
              </td>
            </tr>
            <tr>
              <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
              <td class=\\"priority\\"><span class=\\"badge badge-info\\">
          Medium
        </span></td>
              <td class=\\"teams\\">
                <ul>
                  <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                    <!---->
                    <!---->
                  </li>
                  <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                    <!---->
                    <!---->
                  </li>
                </ul>
              </td>
              <td class=\\"description\\">
                <div>
                  <p>Test Tech Debt Description 1 1</p>
                </div>
              </td>
              <td class=\\"notes\\">
                <div>
                  <p>Test Tech Debt Notes 1 1</p>
                </div>
              </td>
              <td class=\\"links\\">
                <ul>
                  <li><a href=\\"https://example.com/test-tech-debt-link-1-1-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-1-1</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 1 1 1</p>
                    </div>
                  </li>
                  <li><a href=\\"https://example.com/test-tech-debt-link-1-1-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-1-2</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 1 1 2</p>
                    </div>
                  </li>
                </ul>
              </td>
            </tr>
            <tr>
              <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-2\\">Test Component Name 2</a></td>
              <td class=\\"priority\\"><span class=\\"badge badge-info\\">
          Medium
        </span></td>
              <td class=\\"teams\\">
                <ul>
                  <li><a href=\\"/teams/test-team-id-2-1\\" class=\\"team-name\\">test-team-id-2-1</a>
                    <!---->
                    <!---->
                  </li>
                  <li><a href=\\"/teams/test-team-id-2-2\\" class=\\"team-name\\">test-team-id-2-2</a>
                    <!---->
                    <!---->
                  </li>
                </ul>
              </td>
              <td class=\\"description\\">
                <div>
                  <p>Test Tech Debt Description 2 1</p>
                </div>
              </td>
              <td class=\\"notes\\">
                <div>
                  <p>Test Tech Debt Notes 2 1</p>
                </div>
              </td>
              <td class=\\"links\\">
                <ul>
                  <li><a href=\\"https://example.com/test-tech-debt-link-2-1-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-2-1-1</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 2 1 1</p>
                    </div>
                  </li>
                  <li><a href=\\"https://example.com/test-tech-debt-link-2-1-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-2-1-2</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 2 1 2</p>
                    </div>
                  </li>
                </ul>
              </td>
            </tr>
            <tr>
              <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-3\\">Test Component Name 3</a></td>
              <td class=\\"priority\\"><span class=\\"badge badge-info\\">
          Medium
        </span></td>
              <td class=\\"teams\\">
                <ul>
                  <li><a href=\\"/teams/test-team-id-3-1\\" class=\\"team-name\\">test-team-id-3-1</a>
                    <!---->
                    <!---->
                  </li>
                  <li><a href=\\"/teams/test-team-id-3-2\\" class=\\"team-name\\">test-team-id-3-2</a>
                    <!---->
                    <!---->
                  </li>
                </ul>
              </td>
              <td class=\\"description\\">
                <div>
                  <p>Test Tech Debt Description 3 1</p>
                </div>
              </td>
              <td class=\\"notes\\">
                <div>
                  <p>Test Tech Debt Notes 3 1</p>
                </div>
              </td>
              <td class=\\"links\\">
                <ul>
                  <li><a href=\\"https://example.com/test-tech-debt-link-3-1-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-3-1-1</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 3 1 1</p>
                    </div>
                  </li>
                  <li><a href=\\"https://example.com/test-tech-debt-link-3-1-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-3-1-2</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 3 1 2</p>
                    </div>
                  </li>
                </ul>
              </td>
            </tr>
          </tbody>
        </table>
      </p>
    </div>
    <!---->
    <!---->
  </div>
</div>"
`;

exports[`TechDebtsView when components prop is set to multiple components with tech debts when selecting a filter, the filter is applied to the tech debts in the table 2`] = `
"<div>
  <div class=\\"card my-3\\">
    <!---->
    <!---->
    <div class=\\"list-group\\">
      <!---->
      <div class=\\"list-group-item list-group-item-warning\\"><span class=\\"display-2\\">1</span> <b>High</b> tech debt
      </div>
      <div class=\\"list-group-item list-group-item-info\\"><span class=\\"display-3\\">1</span> <b>Medium</b> tech debt
      </div>
    </div>
    <!---->
    <!---->
  </div>
  <div class=\\"mt-3 mb-4\\"><button id=\\"toggle-filters\\" type=\\"button\\" class=\\"btn btn-secondary collapsed\\" aria-expanded=\\"false\\" aria-controls=\\"filters\\"><svg viewBox=\\"0 0 16 16\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" role=\\"img\\" aria-label=\\"blank\\" aria-hidden=\\"true\\" xmlns=\\"http://www.w3.org/2000/svg\\" fill=\\"currentColor\\" class=\\"bi-blank b-icon bi\\">
        <g></g>
      </svg> Filters
    </button>
    <transition-stub css=\\"true\\" enterclass=\\"\\" leaveclass=\\"collapse show\\" entertoclass=\\"collapse show\\" leavetoclass=\\"collapse\\" enteractiveclass=\\"collapsing\\" leaveactiveclass=\\"collapsing\\" class=\\"mt-3\\">
      <div id=\\"filters\\" class=\\"collapse\\" style=\\"display: none;\\">
        <div class=\\"card-columns\\" style=\\"column-count: 3;\\">
          <!---->
          <!---->
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__103\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__103__BV_label_\\">Teams</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__104\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-1\\" id=\\"__BVID__104_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__104_BV_option_0\\"><span>test-team-id-1-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-1-2\\" id=\\"__BVID__104_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__104_BV_option_1\\"><span>test-team-id-1-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-1\\" id=\\"__BVID__104_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__104_BV_option_2\\"><span>test-team-id-2-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-2-2\\" id=\\"__BVID__104_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__104_BV_option_3\\"><span>test-team-id-2-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-1\\" id=\\"__BVID__104_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__104_BV_option_4\\"><span>test-team-id-3-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"team\\" class=\\"custom-control-input\\" value=\\"test-team-id-3-2\\" id=\\"__BVID__104_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__104_BV_option_5\\"><span>test-team-id-3-2</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__111\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__111__BV_label_\\">Tags</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__112\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-1\\" id=\\"__BVID__112_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__112_BV_option_0\\"><span>test-tag-1-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-1-2\\" id=\\"__BVID__112_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__112_BV_option_1\\"><span>test-tag-1-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-1\\" id=\\"__BVID__112_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__112_BV_option_2\\"><span>test-tag-2-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-2-2\\" id=\\"__BVID__112_BV_option_3\\"><label class=\\"custom-control-label\\" for=\\"__BVID__112_BV_option_3\\"><span>test-tag-2-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-1\\" id=\\"__BVID__112_BV_option_4\\"><label class=\\"custom-control-label\\" for=\\"__BVID__112_BV_option_4\\"><span>test-tag-3-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"tag\\" class=\\"custom-control-input\\" value=\\"test-tag-3-2\\" id=\\"__BVID__112_BV_option_5\\"><label class=\\"custom-control-label\\" for=\\"__BVID__112_BV_option_5\\"><span>test-tag-3-2</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__119\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__119__BV_label_\\">Component Types</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__120\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-1\\" id=\\"__BVID__120_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__120_BV_option_0\\"><span>test-component-type-id-1</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-2\\" id=\\"__BVID__120_BV_option_1\\"><label class=\\"custom-control-label\\" for=\\"__BVID__120_BV_option_1\\"><span>test-component-type-id-2</span></label></div>
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"componentTypeId\\" class=\\"custom-control-input\\" value=\\"test-component-type-id-3\\" id=\\"__BVID__120_BV_option_2\\"><label class=\\"custom-control-label\\" for=\\"__BVID__120_BV_option_2\\"><span>test-component-type-id-3</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <fieldset class=\\"form-group\\" id=\\"__BVID__124\\">
                <legend tabindex=\\"-1\\" class=\\"bv-no-focus-ring col-form-label pt-0\\" id=\\"__BVID__124__BV_label_\\">Platforms</legend>
                <div>
                  <div role=\\"group\\" tabindex=\\"-1\\" class=\\"bv-no-focus-ring\\" id=\\"__BVID__125\\">
                    <div class=\\"custom-control custom-checkbox\\"><input type=\\"checkbox\\" name=\\"platformId\\" class=\\"custom-control-input\\" value=\\"undefined\\" id=\\"__BVID__125_BV_option_0\\"><label class=\\"custom-control-label\\" for=\\"__BVID__125_BV_option_0\\"><span>undefined</span></label></div>
                  </div>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </fieldset>
            </div>
            <!---->
            <!---->
          </div>
          <div class=\\"card bg-secondary\\">
            <!---->
            <!---->
            <div class=\\"card-body\\">
              <!---->
              <!---->
              <div role=\\"group\\" class=\\"form-group\\" id=\\"__BVID__127\\"><label for=\\"component-filter\\" class=\\"d-block\\" id=\\"__BVID__127__BV_label_\\">Component</label>
                <div><select id=\\"component-filter\\" class=\\"custom-select custom-select-sm\\">
                    <option value=\\"\\">Please select a component</option>
                    <option value=\\"test-component-id-1\\">test-component-id-1</option>
                    <option value=\\"test-component-id-2\\">test-component-id-2</option>
                    <option value=\\"test-component-id-3\\">test-component-id-3</option>
                  </select>
                  <!---->
                  <!---->
                  <!---->
                </div>
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"card my-3\\">
    <!---->
    <!---->
    <div class=\\"card-body\\">
      <h4 class=\\"card-title\\">2 Tech Debts</h4>
      <!---->
      <p class=\\"card-text\\">
        <table class=\\"table table-dark\\">
          <thead>
            <tr>
              <th class=\\"component\\">Component</th>
              <th class=\\"priority\\">Priority</th>
              <th class=\\"teams\\">Teams</th>
              <th class=\\"description\\">Description</th>
              <th class=\\"notes\\">Notes</th>
              <th class=\\"links\\">Links</th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
              <td class=\\"priority\\"><span class=\\"badge badge-warning\\">
          High
        </span></td>
              <td class=\\"teams\\">
                <ul>
                  <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                    <!---->
                    <!---->
                  </li>
                  <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                    <!---->
                    <!---->
                  </li>
                </ul>
              </td>
              <td class=\\"description\\">
                <div>
                  <p>Test Tech Debt Description 1 2</p>
                </div>
              </td>
              <td class=\\"notes\\">
                <div>
                  <p>Test Tech Debt Notes 1 2</p>
                </div>
              </td>
              <td class=\\"links\\">
                <ul>
                  <li><a href=\\"https://example.com/test-tech-debt-link-1-2-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-2-1</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 1 2 1</p>
                    </div>
                  </li>
                  <li><a href=\\"https://example.com/test-tech-debt-link-1-2-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-2-2</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 1 2 2</p>
                    </div>
                  </li>
                </ul>
              </td>
            </tr>
            <tr>
              <td class=\\"component table-primary\\"><a href=\\"/components/test-component-id-1\\">Test Component Name 1</a></td>
              <td class=\\"priority\\"><span class=\\"badge badge-info\\">
          Medium
        </span></td>
              <td class=\\"teams\\">
                <ul>
                  <li><a href=\\"/teams/test-team-id-1-1\\" class=\\"team-name\\">test-team-id-1-1</a>
                    <!---->
                    <!---->
                  </li>
                  <li><a href=\\"/teams/test-team-id-1-2\\" class=\\"team-name\\">test-team-id-1-2</a>
                    <!---->
                    <!---->
                  </li>
                </ul>
              </td>
              <td class=\\"description\\">
                <div>
                  <p>Test Tech Debt Description 1 1</p>
                </div>
              </td>
              <td class=\\"notes\\">
                <div>
                  <p>Test Tech Debt Notes 1 1</p>
                </div>
              </td>
              <td class=\\"links\\">
                <ul>
                  <li><a href=\\"https://example.com/test-tech-debt-link-1-1-1\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-1-1</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 1 1 1</p>
                    </div>
                  </li>
                  <li><a href=\\"https://example.com/test-tech-debt-link-1-1-2\\" target=\\"_blank\\">https://example.com/test-tech-debt-link-1-1-2</a> <br>
                    <div>
                      <p>Test Tech Debt Link Description 1 1 2</p>
                    </div>
                  </li>
                </ul>
              </td>
            </tr>
          </tbody>
        </table>
      </p>
    </div>
    <!---->
    <!---->
  </div>
</div>"
`;
